New: added PYP-pialign, an unsupervised phrasal ITG aligner! (currently, we support training, and no phrasal aligner exists)
New: added BleuS, Inv-WER and CDER for MT evaluation
New: added cicada_filter_alignment with visualization mode for the ease of word alignment analysis (combined with less -R or lv -c!)
New: added PYP-itg, an unsupervised ITG word-aligner!

2012-4-9
INCOMPATIBLE CHANGE: renamed cicada_learn_block_mpi to cicada_learn_online_kbest_mpi and use the block-wise algorithms for cicada_learn_online_mpi
Bugfix: Adde brevity penalty for RIBES
Bugfix: Do not read oracles when learning by xBLEU
New: added # of non-terminals in cicada-extract.py with "scfg" (currently, we support 0, 1, 2, 3)
New: added permute-deterministic which deterministically permute hyperedges wrt the category of the head.
New: added filter for alignment: Currently, we support inverse, permutation
New: added xBLEU to cicada_learn_online_kbest_mpi
New: support the latest sparse hash (moved from google to sparsehash) and gperftools (renamed from google-perftools)
New: added PYP-LM (highly experimental) and we can use it as our feature function!
New: added PYP-translit, an unsupervised transliterator model (currently, we support training and no real transliterator exists)
New: added PYP-segment, an unsupervised word segmenter (currently, we support training and no real segmenter exists)

2012-2-15
Added MIRA-like optimization for PRO-style learning
Better parse-cky/parse-tree-cky with correct cube-pruning
Smaller memory usage by removing spurious heap allocations
New: xBLEU training at cicada_learn{,_kbest}{,_mpi}

2012-1-18
INCOMPATIBLE CHANGE: revised internal indexing for tree-grammars. (You do not have to re-index, but the size is slightly smaller)
Better ngram feature computation by pre-transforming into word-id
Faster compose-phrase for phrase-based SMT :-)
New: added softmax-margin and loss-margin in cicaa_learn_kbest{,_mpi} (probably, we will deprecate cicada_maxlike{,mpi})